--- a/ActiveDynamicWall/MainPage.xaml
+++ b/ActiveDynamicWall/MainPage.xaml
@@ -30,6 +30,7 @@
                         <Flyout>
                             <StackPanel>
                                 <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="The Layout of the app is similar to a day Calendar. You can add Images to a specific Time and it will be Automatically set as a Desktop or Lockscreen Wallpaper. It is possible with this app to manually create a dynamic Desktop and Lockscreen wallpaper similar to the one featured on Mac OS Mojave." TextWrapping="WrapWholeWords" Margin="0,0,0,12" Width="400"/>
+                                <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="In order to set an Image as a wallpaper, start by selecting the desired Image; choose the desired time for this image to be applied; and add the image to the wallpaper collection. before moving to the next step, you should choose if the collection should be applied as a desktop wallpaper, lockscreen wallpaper or both. After adding all the images and choosing the desiered settings, you can go ahead and press start for the collection to be transfered to the background process." TextWrapping="WrapWholeWords" Margin="0,0,0,12" Width="400"/>
                                 <HyperlinkButton Content="Mojave Dynamic Heic " NavigateUri="https://github.com/xtai/mojave-dynamic-heic"/>
                             </StackPanel>
                         </Flyout>
@@ -44,15 +45,16 @@
                 <AppBarSeparator />
                 <AppBarButton Icon="Refresh" Label="Remove all Wallpapers" Click="ResetApp"/>
             </CommandBar>
-            <GridView Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Margin="5">
+            <GridView Margin="10" HorizontalAlignment="Center" VerticalAlignment="Top" ScrollViewer.HorizontalScrollMode="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollMode="Enabled">
+                <StackPanel Margin="15">
+                    <TextBlock Text="Select an Image with a Timer:" Margin="5,5,5,15"/>
                     <Button Height="170" Width="242" Style="{ThemeResource ButtonRevealStyle}" Background="{ThemeResource SystemControlAcrylicWindowBrush}" Click="FilePickerWallpaper" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center">
                         <StackPanel>
                             <Image x:Name="selectImg"/>
                             <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Select Image" HorizontalAlignment="Center" Opacity="0.75"></TextBlock>
                         </StackPanel>
                     </Button>
-                    <TimePicker Width="160" HorizontalAlignment="Left" Margin="0,10,0,10" VerticalAlignment="Center" Header="Time to Apply Wallpaper:" ClockIdentifier="24HourClock" x:Name="timeSelectedForWallpaper"></TimePicker>
+                    <TimePicker Width="160" HorizontalAlignment="Center" Margin="0,10,0,10" VerticalAlignment="Center" Header="Time to Apply Wallpaper:" ClockIdentifier="24HourClock" x:Name="timeSelectedForWallpaper"></TimePicker>
                     <Button Height="40" Width="242" Style="{ThemeResource ButtonRevealStyle}" Opacity="0.75" Background="{ThemeResource SystemControlAcrylicWindowBrush}" Click="AddFile" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Center">
                         <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Add Image To Wallpaper List"></TextBlock>
                     </Button>
@@ -60,6 +62,19 @@
                         <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Oops!"></TextBlock>
                     </Button>
                     <TextBlock x:Name="AddImageOutput" Style="{ThemeResource BaseTextBlockStyle}"></TextBlock>
+                </StackPanel>
+                <StackPanel Margin="15">
+                    <TextBlock Text="Select sets of Day/Night Images:" Margin="5,5,5,15"/>
+                    <Button Height="90" Width="242" Style="{ThemeResource ButtonRevealStyle}" Opacity="0.75" Background="{ThemeResource SystemControlAcrylicWindowBrush}" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Center">
+                        <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Add Day Image sequence" Margin="0,0,0,0"></TextBlock>
+                    </Button>
+                    <Button Height="90" Width="242" Style="{ThemeResource ButtonRevealStyle}" Opacity="0.75" Background="{ThemeResource SystemControlAcrylicWindowBrush}" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Center">
+                        <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Add Night Image sequence" Margin="0,0,0,0"></TextBlock>
+                    </Button>
+                    <Button Height="40" Width="242" Style="{ThemeResource ButtonRevealStyle}" Opacity="0.75" Background="{ThemeResource SystemControlAcrylicWindowBrush}" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Center">
+                        <TextBlock Style="{ThemeResource BaseTextBlockStyle}" Text="Add Images To Wallpaper List"></TextBlock>
+                    </Button>
+                    <TextBlock Text="Information Text Comes Here" Margin="5,5,5,5" Width="242" TextWrapping="WrapWholeWords"/>
                 </StackPanel>
             </GridView>
             <GridView ItemsSource="{x:Bind wallpapers}" Margin="0,0,0,20">
